# FalconEngine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
data/: CMakeLists.txt
data/resources/: boy.json  boy_stand_animation.json  boy_walk_animation.json  boystand.json  boywalk.json  walkvector.json
src/: CMakeLists.txt
src/engine/: AnimatedObject.h  Animation.cxx  Animation.h  AnimationTypes.cxx  AnimationTypes.h  CMakeLists.txt  Command.h  Controller.h  DirectedAnimation.cxx  DirectedAnimation.h  Directions.h  DynamicState.h  Engine.cxx  Engine.h  EngineException.h  Event.cxx  Event.h  IAnimation.h  IUnitState.h  Matrix.h  ObjectManager.cxx  ObjectManager.h  Renderer.cxx  Renderer.h  ResourceManager.cxx  ResourceManager.h  State.h  StateMachine.cxx  StateMachine.h  StateManager.h  Target.cxx  Target.h  Tile.cxx  Tile.h  TimerPool.cxx  TimerPool.h  Unit.cxx  Unit.h  UnitContext.cxx  UnitContext.h  (+16 more)
src/falcon/: Animation.cxx  AnimationTypes.h  CMakeLists.txt  ComponentRegister.cxx  ComponentRegister.h  ComponentRegistry.cxx  ComponentRegistry.h  DirectedAnimation.cxx  Engine.cxx  Engine.h  EngineException.h  Entity.cxx  Entity.h  EntityManager.cxx  EntityManager.h  EventManager.cxx  EventManager.h  EventType.h  Frame.cxx  Frame.h  GameObject.cxx  GameObject.h  IComponent.cxx  IComponent.h  IEntity.cxx  IEntity.h  IEvent.h  IGameBuilder.h  IGameObject.cxx  IGameObject.h  IGameState.cxx  IGameState.h  ISystem.cxx  ISystem.h  ObjectManager.cxx  ObjectManager.h  Renderer.h  ResourceManager.cxx  ResourceManager.h  StateMachine.h  (+5 more)
src/falcon/components/: Animation.h  Health.h  Player.h  Position.h  Size.h  Solidity.h  State.h  Velocity.h  Visual.h
src/falcon/events/: EventType.h  IEvent.cxx  IEvent.h  KeyEvent.h
src/falcon/old/: Animation.h  ComponentRegistry.h  Controller.h  DynamicState.h  Engine.h  EntityManager.cxx  EntityManager.h  ObjectManager.cxx  Target.h  UnitController.h  UnitIdleState.cxx  UnitMoveCommand.cxx  WorldObject.h
src/falcon/systems/: AnimationSystem.cxx  AnimationSystem.h  ISystem.cxx  PlayerControlSystem.cxx  PlayerControlSystem.h  RenderingSystem.cxx  RenderingSystem.h
src/firefly/: CMakeLists.txt  Engine.cxx  Engine.h  Entity.cxx  Entity.h  EntityManager.cxx  EntityManager.h  EntityPrototypes.cxx  EntityPrototypes.h  EntityRegistry.cxx  EntityRegistry.h  EventManager.cxx  EventManager.h  EventType.h  Frame.cxx  Frame.h  GameObject.cxx  GameObject.h  IGameBuilder.h  IGameState.cxx  IGameState.h  ObjectManager.cxx  ObjectManager.h  Renderer.cxx  Renderer.h  ResourceManager.cxx  ResourceManager.h  StateMachine.cxx  StateMachine.h  SystemManager.cxx  SystemManager.h  TimerPool.cxx  TimerPool.h  Types.h
src/firefly/components/: Ammunition.h  Fuel.h  Gravity.h  Health.h  IComponent.cxx  IComponent.h  Lifetime.h  Lives.h  Player.h  Position.h  RoundCollidable.h  Solidity.h  State.h  Temporal.h  Velocity.h  Visual.h
src/firefly/events/: EntityEvent.h  EventType.h  IEvent.cxx  IEvent.h  KeyEvent.h  NativeEvent.cxx  NativeEvent.h  SetAccelerationEvent.cxx  SetAccelerationEvent.h  SpeedEvent.cxx  SpeedEvent.h  StateEvent.h
src/firefly/systems/: ISystem.cxx  ISystem.h  PlayerControlSystem.cxx  PlayerControlSystem.h  PositioningSystem.cxx  PositioningSystem.h  RenderingSystem.cxx  RenderingSystem.h  StateSystem.h  VelocitySystem.cxx  VelocitySystem.h
src/game/: CMakeLists.txt  Field.cxx  Field.h  IsometricField.cxx  IsometricField.h
src/game/spacewar/: CMakeLists.txt  EntityBuilder.cpp  EntityBuilder.cxx  EntityBuilder.h  GameBuilder.cpp  GameBuilder.cxx  GameBuilder.h  GameState.cpp  GameState.cxx  GameState.h  MenuState.h  ObjectBuilder.cpp  ObjectBuilder.h  SpaceWarBuilder.h  StateNames.cxx  StateNames.h  States.h  SystemBuilder.cxx  UnitBuilder.cpp  UnitBuilder.h  main.cpp  main.cxx
src/game/spacewar/data/: CMakeLists.txt  player1.json
src/game/spacewar/data/resources/: background.json  logo.json  player1.json  player2.json  rocket.json  star.json
src/game/spacewar/misc/: Quadtree.cxx  VelocityHelpers.cxx  VelocityHelpers.h
src/game/spacewar/states/: GameOverState.cxx  GameStates.h  MainState.cxx  MainState.h  MenuState.cxx  MenuState.h
src/game/spacewar/systems/: CollisionSystem.cxx  CollisionSystem.h  FuelSystem.cxx  FuelSystem.h  GameStateSystem.cxx  GameStateSystem.h  GravitationSystem.cxx  GravitationSystem.h  GravitationalSystem.cxx  GravitationalSystem.h  LifetimeSystem.cxx  LifetimeSystem.h  PlayerControlSystem.cxx  PlayerControlSystem.h  PlayerUISystem.cxx  PositioningSystem.cxx  PositioningSystem.h  Quadtree.cxx  Quadtree.h  RespawnSystem.cxx  RespawnSystem.h  ShipControlSystem.cxx  ShipControlSystem.h  ShipStateSystem.cxx  ShipStateSystem.h  StateSystem.cxx  StateSystem.h  VelocitySystem.cxx  VelocitySystem.h  WeaponSystem.cxx  WeaponSystem.h
src/test/: CMakeLists.txt  FieldTest.cxx  animationTest.cxx  directedAnimationTest.cxx  jsonTets.cxx  main.cpp  main.cxx
